# ZetsukaeLauncher

./: .env.example  .gitignore  ACCOUNT_MANAGEMENT.md  EMAIL_GUIDE.md  MULTI_ACCOUNT_GUIDE.md  README.md  TESTING_MULTI_ACCOUNT.md  ZETID_DOCUMENTATION.md  ZETID_IMPLEMENTATION.md  ZETID_QUICKSTART.md  ZETID_TESTING.md  email-server.js  main.js  package-lock.json  package.json  preload.js
games/: README.md  pluberry.global.xml  tadg.global.xml  test.global.xml  underfang.global.xml
games/underfang/: global.xml
src/: .env.example  auth-manager.js  console.css  index.html  main.js  portable.css  renderer.js  style.css  styles.css  supabase-auth.js  sync-service.js
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/games/: index.json  pluberry.global.xml  underfang.global.xml
