[package]
name = "zetsukae_launcher"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.4", features = [] }
winreg = "0.11"
tauri-plugin-shell = "2"
open = "5.4.0"
tauri-plugin-dialog = "2"
